src/assets/css/card.css
.card {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

img {
  width: 270px;
  height: 160px;
  object-fit: cover;
}

.card-div {
  height: 160px !important;
}

